updating linkedIn link

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "AI Researcher"
   location         : "Seville, Spain"
-  employer         : "Researcher Fellow at the Microelectronics Institute of Seville (IMSE)"
+  employer         : "AI Research Fellow, IMSE"
   uri              : # URL
   email            : "" 
 
@@ -57,7 +57,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "Mario Chacón Falcón"
+  linkedin         : "mario-chacon-falcon518831318"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
