--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "MarioCHF/MarioCHF.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Mario Chacón Falcón"
+  name             : "Mario Chacón-Falcón"
   pronouns         : # example: "she/her"  
   bio              : "AI Researcher"
   location         : "Seville, Spain"
