adding a profile pic

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "MarioCHF/MarioCHF.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profilePic.png"
   name             : "Mario Chacón-Falcón"
   pronouns         : # example: "she/her"  
   bio              : "AI Researcher"
