--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ main:
   #  url: /year-archive/
     
   - title: "CV"
-    url: /cv/
+    url: https://mariochf.github.io/files/EnglishCurriculum22_07_24.pdf
     
   #- title: "Guide"
   #  url: /markdown/
